# rhythm_pattern_explorer

./: .gitignore  .gitmodules  BACKWARD_COMPATIBILITY_PRESERVED.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN_HANDOFF.md  DIRECTORY_REORGANIZATION_COMPLETE.md  GITHUB_RELEASE_INSTRUCTIONS.md  LICENSE  MIDI_NOTE_DURATION_DEBUGGING.md  PLATFORM_DIFFERENCES.md  README.md  RELEASE_NOTES.md  RELEASE_PROTECTION.md  Rhythm Pattern Explorer Checklist.txt  SERPE_CMAKE_MIGRATION.md  SERPE_UNIFICATION_PLAN.md  TouchOSC-iPad-Setup.md  accent_debug_test.html  accent_pattern_architecture_analysis.md  accent_sync_test.html  app  app-controller-browser.js  app-controller.js  app-template.html  comprehensive-test-suite.html  comprehensive_notation_test.html  debug-combination-display.html  debug-sorting.html  debug_bjorklund.js  docs-maintenance.js  final-test-check.html  hex_notation_test.html  hex_trace_test.html  iPad-MIDI-Setup-Instructions.md  integration-tests-full-system.html  math-core.js  minimal-combination-test.html  octal_trace_test.html  (+15 more)
.github/workflows/: ci.yml
Documentation/: ACCENT_SWIRLING_TEST_STRATEGY.md  FEATURE_PARITY.md  ICON_iPadOS26.md  PHASE1_COMPLETION_STATUS.md  README-Serpe.md
Plugin/: INSTALLATION_SUCCESS.md  INTEGRATION_NOTES.md  PERFORMANCE_TEST_GUIDE.md  README.md  RhythmPatternExplorer.jucer  build.sh  corrected_pie_visualization.md  donut_visualization_summary.md  slice_positioning_fixes.md  stress_test_v0.01.py  test_notation_fix.py  test_ui_notation.py  test_v0_02a_fixes.py
Plugin/Archive/: PluginProcessor_Original.cpp  PluginProcessor_Original.h  comprehensive_progressive_test.html  progressive_test_simple.js  test_progressive_transformations.js
Plugin/Binaries/: README.md
Plugin/Documentation/: ACCENT_SYSTEM_ARCHITECTURE.md  CLICKABLE_STEPS_FEATURE.md  PLUGIN_STATUS.md  PROGRESSIVE_TRANSFORMATION_LOGIC.md  PROJECT_SUMMARY.md  QuantizationTestPlan.md  StateInventory.md
Plugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Plugin/Source/: AccentManager.cpp  AccentManager.h  DebugConfig.h  PatternEngine.cpp  PatternEngine.h  PatternUtils.cpp  PatternUtils.h  PluginEditor.cpp  PluginEditor.h  PluginEditor_backup.cpp  PluginEditor_new.cpp  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  ProgressiveManager.cpp  ProgressiveManager.h  QuantizationEngine.h  UPIParser.cpp  UPIParser.h
Plugin/Tests/: ACCENT_SYSTEM_PRINCIPLES.md  AU_StressTest.md  AccentClickTests  AccentClickTests.cpp  AccentMappingTests  AccentMappingTests.cpp  AccentPatternTests.md  AccentPreservationDebugTests.cpp  AccentTargetingTests  AccentTargetingTests.cpp  AccentsFix.md  AdvancedHostSyncTestingGuide.md  AdvancedHostSyncTests  AdvancedHostSyncTests.cpp  BUILD_INTEGRATION.md  BarlowPatternTests.cpp  CorrectBarlowAlgorithm.cpp  CriticalFixesTests  CriticalFixesTests.cpp  DebugBarlowAlgorithm  DebugBarlowAlgorithm.cpp  DebugE58  DebugE58.cpp  HexInversion.md  HexOctalCoreTests  HexOctalCoreTests.cpp  HexOctalNotationTests.cpp  Makefile  (+91 more)
Release-v0.02a/: INSTALLATION.md  README-RELEASE.md  RELEASE_NOTES.md
RhythmPatternExplorer_iPad/: ALTERNATIVE_APPROACH.md  COREMIDI_TROUBLESHOOTING.md  CREATE_FRESH_PROJECT.md  DEBUG_JUCER.sh  DEPLOY_AND_TEST_GUIDE.md  DESKTOP_TO_IPAD_APPROACH.md  FEATURE_PARITY_TIMELINE.md  INFO_PLIST_FIX.md  IPAD_AUDEV_DIFFERENCES.md  Info-AUv3_AppExtension_UPDATED.plist  MISSING_APP_TARGET_FIX.md  QUICK_SETUP_GUIDE.md  README.md  RPE_IPAD_RELEASE_PLAN.md  RhythmPatternExplorer_iPad.jucer  RhythmPatternExplorer_iPad_BASE.jucer  RhythmPatternExplorer_iPad_FINAL.jucer  RhythmPatternExplorer_iPad_WORKING.jucer  SIMPLE_FIX_STEPS.md  TARGET_SELECTION_FIX.md  TEMPLATE_PACKAGE_READY.md  TEST_EXISTING_PROJECT.md  WARNING_FIXES.md  XCODE_CONFIGURATION_STEPS.md  XCODE_SETUP_GUIDE.md  XCODE_SETUP_GUIDE_v2.md  auv3_plugin_icon_guide.md  generate_icons.py  icon_concept.html  icon_generator.html  missing_icons_fix.md  plugin_icon_fix.md
Serpe/: ACCENT_MORPHING_FAILED_EXPERIMENTS.md  DERIVED_INDEXING_ARCHITECTURE_PLAN.md  DERIVED_INDICES_IMPLEMENTATION_PLAN.md  Serpe.jucer  Working.jucer  monitor_debug.sh  simple_accent_test  simple_accent_test.cpp
Serpe-iOS/: Clip6.midi  Info.plist.template  Serpe_iOS.jucer
WebApp/: MIDI-SETUP-GUIDE.md  PROGRESSIVE_TRANSFORMATION_REFERENCE.md  README.md  WEBAPP_README.md  WORKING-MIDI-SOLUTIONS.md  minimal-midi-bridge.py  serve-app.py
app/: README.md  app-config.js  app-controller-browser.js  app-styles.css  docs-manager.js  documentation.html  index.html  ipad-midi-test.html  math-core.js  math-renderer.js  midi-output.js  pattern-analysis.js  pattern-database.js  pattern-generators.js  pattern-processing.js  platform-utils.js  sequencer-audio.js  sequencer-controller.js  sequencer-visual.js  touchosc-ipad-bridge.js  ui-components.js
tests/: test_indispensability.js  test_indispensability_cpp  test_indispensability_cpp.cpp  test_morse_encoding.py  test_morse_length_fix.py  test_new_notations.py  test_prime_patterns.py  test_progressive_transformations.py
tests-rests/: angle-calculation-analysis.md  app-controller-browser.js  app-controller.js  app-styles.css  cleanup.sh  cog-test-results-summary.md  complete-function-documentation.md  comprehensive-interactive-test-suite.html  debug-angle-calculation.html  debug-angle-test.js  debug-test-failures.html  documentation-completion-summary.md  final-documentation-summary.md  index-original-backup.html  integration-tests.html  layout-redesign.html  manual-test-checklist.md  pattern-generators.js  perfect-balance-analysis.js  quick-test.js  simple-test.html  stress-tests.html  test-actual-cog.js  test-app-config.html  test-app-controller-standalone.html  test-app-controller-working.html  test-app-template.html  test-browser-compatibility.html  test-cog-analysis.js  test-cog-browser.html  test-cog-node.js  test-cog-pattern.js  test-implementations.js  test-pattern-exploration-standalone.html  test-polygon-filter.html  test-runner.html  test-sequencer-audio-final.html  test-sequencer-audio.html  test-sequencer-controller.html  test-sequencer-visual-standalone.html  (+6 more)
(+250 files in other folders)
